Dialer: Various other fixes
Change-Id: Ia664f17bc891d3cbe38020a3e7fb310c7789e03f